Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -1,159 +1,159 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DR9.AI - Inteligência Artificial e Automação Premium</title>
-    <meta name="description" content="DR9.AI - Soluções em IA, automação e licenças digitais. Transforme seu negócio com tecnologia de ponta.">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>DR9.AI - Inteligência Artificial e Automação Premium</title>
+<meta name="description" content="DR9.AI - Soluções em IA, automação e licenças digitais. Transforme seu negócio com tecnologia de ponta.">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <!-- ANIMAÇÕES PARTICULARES -->
-    <div id="particles-js"></div>
-    <div class="floating floating-1">🚀</div>
-    <div class="floating floating-2">🤖</div>
-    <div class="floating floating-3">💡</div>
+<!-- ANIMAÇÕES PARTICULARES -->
+<div id="particles-js"></div>
+<div class="floating floating-1">🚀</div>
+<div class="floating floating-2">🤖</div>
+<div class="floating floating-3">💡</div>
 
-    <!-- HEADER -->
-    <header id="header">
-        <div class="container">
-            <div class="header-content">
-                <a href="#" class="logo"><i class="fas fa-robot logo-icon"></i> DR9.AI</a>
-                <button class="mobile-menu" id="mobileMenu"><i class="fas fa-bars"></i></button>
-                <nav id="mainNav">
-                    <ul>
-                        <li><a href="#home">Início</a></li>
-                        <li><a href="#services">Serviços</a></li>
-                        <li><a href="#contact">Contato</a></li>
-                    </ul>
-                </nav>
+<!-- HEADER -->
+<header id="header">
+<div class="container">
+    <div class="header-content">
+        <a href="#" class="logo"><i class="fas fa-robot logo-icon"></i> DR9.AI</a>
+        <button class="mobile-menu" id="mobileMenu"><i class="fas fa-bars"></i></button>
+        <nav id="mainNav">
+            <ul>
+                <li><a href="#home">Início</a></li>
+                <li><a href="#services">Serviços</a></li>
+                <li><a href="#contact">Contato</a></li>
+            </ul>
+        </nav>
+    </div>
+</div>
+</header>
+
+<!-- HERO / DESTAQUE -->
+<section class="hero" id="home">
+<div class="container">
+    <div class="hero-content">
+        <h1>DR9.AI</h1>
+        <p class="hero-subtitle">Softwares, IA e Automação Descomplicada</p>
+
+        <div class="checkbox-list">
+            <div class="checkbox-item">
+                <div class="checkbox-icon">✓</div>
+                <div class="checkbox-text">DM para Licenças Exclusivas</div>
+            </div>
+            <div class="checkbox-item">
+                <div class="checkbox-icon">✓</div>
+                <div class="checkbox-text">IA e Automação para Empreendedores</div>
+            </div>
+            <div class="checkbox-item">
+                <div class="checkbox-icon">✓</div>
+                <div class="checkbox-text">Licenças Digitais Fáceis de Usar</div>
             </div>
         </div>
-    </header>
 
-    <!-- HERO / DESTAQUE -->
-    <section class="hero" id="home">
-        <div class="container">
-            <div class="hero-content">
-                <h1>DR9.AI</h1>
-                <p class="hero-subtitle">Softwares, IA e Automação Descomplicada</p>
+        <div class="buttons">
+            <a href="#" class="btn btn-primary" id="whatsappBtn">
+                <i class="fab fa-whatsapp"></i> Falar no WhatsApp
+            </a>
+            <a href="#" class="btn btn-outline" id="telegramBtn">
+                <i class="fab fa-telegram"></i> Falar no Telegram
+            </a>
+        </div>
+    </div>
+</div>
+</section>
 
-                <div class="checkbox-list">
-                    <div class="checkbox-item">
-                        <div class="checkbox-icon">✓</div>
-                        <div class="checkbox-text">DM para Licenças Exclusivas</div>
-                    </div>
-                    <div class="checkbox-item">
-                        <div class="checkbox-icon">✓</div>
-                        <div class="checkbox-text">IA e Automação para Empreendedores</div>
-                    </div>
-                    <div class="checkbox-item">
-                        <div class="checkbox-icon">✓</div>
-                        <div class="checkbox-text">Licenças Digitais Fáceis de Usar</div>
-                    </div>
-                </div>
+<!-- SERVIÇOS / FEATURES -->
+<section class="features" id="services">
+<div class="container">
+    <div class="section-title">
+        <h2>Nossas Soluções em IA</h2>
+        <p>Tecnologia avançada para impulsionar seu negócio ao próximo nível</p>
+    </div>
+    <div class="features-grid">
+        <div class="feature-card">
+            <div class="feature-icon"><i class="fas fa-key"></i></div>
+            <h3>DM para Licenças Exclusivas</h3>
+            <p>Sistema de gerenciamento de licenças digitais com controle total, segurança avançada e relatórios detalhados.</p>
+            <span class="status status-available">Disponível</span>
+        </div>
+        <div class="feature-card">
+            <div class="feature-icon"><i class="fas fa-brain"></i></div>
+            <h3>IA e Automação para Empreendedores</h3>
+            <p>Implementamos inteligência artificial personalizada para automatizar processos e aumentar sua produtividade.</p>
+            <span class="status status-available">Disponível</span>
+        </div>
+        <div class="feature-card">
+            <div class="feature-icon"><i class="fas fa-id-card"></i></div>
+            <h3>Licenças Digitais Fáceis de Usar</h3>
+            <p>Soluções intuitivas de licenciamento com interface amigável, suporte completo e integração simplificada.</p>
+            <span class="status status-available">Disponível</span>
+        </div>
+    </div>
+</div>
+</section>
 
-                <div class="buttons">
-                    <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary">
-                        <i class="fab fa-whatsapp"></i> Falar no WhatsApp
-                    </a>
-                    <a href="https://t.me/dr9iSuporte" class="btn btn-outline">
-                        <i class="fab fa-telegram"></i> Falar no Telegram
-                    </a>
-                </div>
+<!-- CTA / CONTATO -->
+<section class="cta" id="contact">
+<div class="container">
+    <div class="cta-content">
+        <h2>Pronto para revolucionar seu negócio?</h2>
+        <p>Entre em contato agora mesmo e descubra como a DR9.AI pode transformar sua operação com inteligência artificial.</p>
+        <div class="buttons">
+            <a href="#" class="btn btn-primary" id="whatsappBtnFooter">
+                <i class="fab fa-whatsapp"></i> Falar no WhatsApp
+            </a>
+            <a href="#" class="btn btn-outline" id="telegramBtnFooter">
+                <i class="fab fa-telegram"></i> Falar no Telegram
+            </a>
+        </div>
+    </div>
+</div>
+</section>
+
+<!-- FOOTER -->
+<footer>
+<div class="container">
+    <div class="footer-content">
+        <div class="footer-column">
+            <h3>DR9.AI</h3>
+            <p>Inteligência Artificial e Automação Descomplicada para empreendedores que buscam inovação e resultados.</p>
+            <div class="social-links">
+                <a href="#"><i class="fab fa-whatsapp"></i></a>
+                <a href="#"><i class="fab fa-telegram"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
             </div>
         </div>
-    </section>
-
-    <!-- SERVIÇOS / FEATURES -->
-    <section class="features" id="services">
-        <div class="container">
-            <div class="section-title">
-                <h2>Nossas Soluções em IA</h2>
-                <p>Tecnologia avançada para impulsionar seu negócio ao próximo nível</p>
-            </div>
-            <div class="features-grid">
-                <div class="feature-card">
-                    <div class="feature-icon"><i class="fas fa-key"></i></div>
-                    <h3>DM para Licenças Exclusivas</h3>
-                    <p>Sistema de gerenciamento de licenças digitais com controle total, segurança avançada e relatórios detalhados.</p>
-                    <span class="status status-available">Disponível</span>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon"><i class="fas fa-brain"></i></div>
-                    <h3>IA e Automação para Empreendedores</h3>
-                    <p>Implementamos inteligência artificial personalizada para automatizar processos e aumentar sua produtividade.</p>
-                    <span class="status status-available">Disponível</span>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon"><i class="fas fa-id-card"></i></div>
-                    <h3>Licenças Digitais Fáceis de Usar</h3>
-                    <p>Soluções intuitivas de licenciamento com interface amigável, suporte completo e integração simplificada.</p>
-                    <span class="status status-available">Disponível</span>
-                </div>
-            </div>
+        <div class="footer-column">
+            <h3>Serviços</h3>
+            <ul>
+                <li><a href="#"><i class="fas fa-chevron-right"></i> IA e Automação</a></li>
+                <li><a href="#"><i class="fas fa-chevron-right"></i> Licenças Digitais</a></li>
+                <li><a href="#"><i class="fas fa-chevron-right"></i> Consultoria em TI</a></li>
+                <li><a href="#"><i class="fas fa-chevron-right"></i> Sistemas Personalizados</a></li>
+            </ul>
         </div>
-    </section>
-
-    <!-- CTA / CONTATO -->
-    <section class="cta" id="contact">
-        <div class="container">
-            <div class="cta-content">
-                <h2>Pronto para revolucionar seu negócio?</h2>
-                <p>Entre em contato agora mesmo e descubra como a DR9.AI pode transformar sua operação com inteligência artificial.</p>
-                <div class="buttons">
-                    <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary">
-                        <i class="fab fa-whatsapp"></i> Falar no WhatsApp
-                    </a>
-                    <a href="https://t.me/dr9iSuporte" class="btn btn-outline">
-                        <i class="fab fa-telegram"></i> Falar no Telegram
-                    </a>
-                </div>
-            </div>
+        <div class="footer-column">
+            <h3>Contato</h3>
+            <ul>
+                <li><a href="#"><i class="fab fa-whatsapp"></i> WhatsApp</a></li>
+                <li><a href="#"><i class="fab fa-telegram"></i> Telegram</a></li>
+                <li><a href="#"><i class="fas fa-envelope"></i> contato@dr9ai.com</a></li>
+            </ul>
         </div>
-    </section>
+    </div>
+    <div class="copyright">
+        <p>&copy; 2023 DR9.AI - Todos os direitos reservados.</p>
+    </div>
+</div>
+</footer>
 
-    <!-- FOOTER -->
-    <footer>
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-column">
-                    <h3>DR9.AI</h3>
-                    <p>Inteligência Artificial e Automação Descomplicada para empreendedores que buscam inovação e resultados.</p>
-                    <div class="social-links">
-                        <a href="https://wa.me/message/JLUZNOGJKK4UK1"><i class="fab fa-whatsapp"></i></a>
-                        <a href="https://t.me/dr9iSuporte"><i class="fab fa-telegram"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                </div>
-                <div class="footer-column">
-                    <h3>Serviços</h3>
-                    <ul>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> IA e Automação</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Licenças Digitais</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Consultoria em TI</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Sistemas Personalizados</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h3>Contato</h3>
-                    <ul>
-                        <li><a href="https://wa.me/message/JLUZNOGJKK4UK1"><i class="fab fa-whatsapp"></i> WhatsApp</a></li>
-                        <li><a href="https://t.me/dr9iSuporte"><i class="fab fa-telegram"></i> Telegram</a></li>
-                        <li><a href="#"><i class="fas fa-envelope"></i> contato@dr9ai.com</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="copyright">
-                <p>&copy; 2023 DR9.AI - Todos os direitos reservados.</p>
-            </div>
-        </div>
-    </footer>
-
-    <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
