--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<!-- ANIMAÇÕES PARTICULARES -->
+<!-- PARTICLES -->
 <div id="particles-js"></div>
 <div class="floating floating-1">🚀</div>
 <div class="floating floating-2">🤖</div>
@@ -21,7 +21,7 @@
 <header id="header">
 <div class="container">
     <div class="header-content">
-        <a href="#" class="logo"><i class="fas fa-robot logo-icon"></i> DR9.AI</a>
+        <a href="#" class="logo"><img src="assets/logo.png" alt="DR9.AI" class="logo-icon"><span>DR9.AI</span></a>
         <button class="mobile-menu" id="mobileMenu"><i class="fas fa-bars"></i></button>
         <nav id="mainNav">
             <ul>
@@ -34,7 +34,7 @@
 </div>
 </header>
 
-<!-- HERO / DESTAQUE -->
+<!-- HERO -->
 <section class="hero" id="home">
 <div class="container">
     <div class="hero-content">
@@ -42,75 +42,58 @@
         <p class="hero-subtitle">Softwares, IA e Automação Descomplicada</p>
 
         <div class="checkbox-list">
-            <div class="checkbox-item">
-                <div class="checkbox-icon">✓</div>
-                <div class="checkbox-text">DM para Licenças Exclusivas</div>
-            </div>
-            <div class="checkbox-item">
-                <div class="checkbox-icon">✓</div>
-                <div class="checkbox-text">IA e Automação para Empreendedores</div>
-            </div>
-            <div class="checkbox-item">
-                <div class="checkbox-icon">✓</div>
-                <div class="checkbox-text">Licenças Digitais Fáceis de Usar</div>
-            </div>
+            <div class="checkbox-item"><div class="checkbox-icon">✓</div><div class="checkbox-text">DM para Licenças Exclusivas</div></div>
+            <div class="checkbox-item"><div class="checkbox-icon">✓</div><div class="checkbox-text">IA e Automação para Empreendedores</div></div>
+            <div class="checkbox-item"><div class="checkbox-icon">✓</div><div class="checkbox-text">Licenças Digitais Fáceis de Usar</div></div>
         </div>
 
         <div class="buttons">
-            <a href="#" class="btn btn-primary" id="whatsappBtn">
-                <i class="fab fa-whatsapp"></i> Falar no WhatsApp
-            </a>
-            <a href="#" class="btn btn-outline" id="telegramBtn">
-                <i class="fab fa-telegram"></i> Falar no Telegram
-            </a>
+            <a href="#" class="btn btn-primary" id="whatsappBtn"><i class="fab fa-whatsapp"></i> Falar no WhatsApp</a>
+            <a href="#" class="btn btn-outline" id="telegramBtn"><i class="fab fa-telegram"></i> Falar no Telegram</a>
         </div>
     </div>
 </div>
 </section>
 
-<!-- SERVIÇOS / FEATURES -->
+<!-- FEATURES -->
 <section class="features" id="services">
 <div class="container">
     <div class="section-title">
         <h2>Nossas Soluções em IA</h2>
-        <p>Tecnologia avançada para impulsionar seu negócio ao próximo nível</p>
+        <p>Pré-visualize nossos serviços e escolha o que deseja adquirir</p>
     </div>
     <div class="features-grid">
         <div class="feature-card">
             <div class="feature-icon"><i class="fas fa-key"></i></div>
             <h3>DM para Licenças Exclusivas</h3>
-            <p>Sistema de gerenciamento de licenças digitais com controle total, segurança avançada e relatórios detalhados.</p>
+            <p>Gerenciamento completo de licenças digitais com segurança avançada.</p>
             <span class="status status-available">Disponível</span>
         </div>
         <div class="feature-card">
             <div class="feature-icon"><i class="fas fa-brain"></i></div>
             <h3>IA e Automação para Empreendedores</h3>
-            <p>Implementamos inteligência artificial personalizada para automatizar processos e aumentar sua produtividade.</p>
+            <p>Automação de planilhas, posts programados e suporte a sistemas de gestão.</p>
             <span class="status status-available">Disponível</span>
         </div>
         <div class="feature-card">
             <div class="feature-icon"><i class="fas fa-id-card"></i></div>
             <h3>Licenças Digitais Fáceis de Usar</h3>
-            <p>Soluções intuitivas de licenciamento com interface amigável, suporte completo e integração simplificada.</p>
+            <p>Integração com Adobe, Windows, Chimera, Unclock e outras ferramentas.</p>
             <span class="status status-available">Disponível</span>
         </div>
     </div>
 </div>
 </section>
 
-<!-- CTA / CONTATO -->
+<!-- CTA -->
 <section class="cta" id="contact">
 <div class="container">
     <div class="cta-content">
         <h2>Pronto para revolucionar seu negócio?</h2>
-        <p>Entre em contato agora mesmo e descubra como a DR9.AI pode transformar sua operação com inteligência artificial.</p>
+        <p>Entre em contato e descubra como a DR9.AI pode transformar sua operação com inteligência artificial.</p>
         <div class="buttons">
-            <a href="#" class="btn btn-primary" id="whatsappBtnFooter">
-                <i class="fab fa-whatsapp"></i> Falar no WhatsApp
-            </a>
-            <a href="#" class="btn btn-outline" id="telegramBtnFooter">
-                <i class="fab fa-telegram"></i> Falar no Telegram
-            </a>
+            <a href="#" class="btn btn-primary" id="whatsappBtnFooter"><i class="fab fa-whatsapp"></i> Falar no WhatsApp</a>
+            <a href="#" class="btn btn-outline" id="telegramBtnFooter"><i class="fab fa-telegram"></i> Falar no Telegram</a>
         </div>
     </div>
 </div>
@@ -122,10 +105,10 @@
     <div class="footer-content">
         <div class="footer-column">
             <h3>DR9.AI</h3>
-            <p>Inteligência Artificial e Automação Descomplicada para empreendedores que buscam inovação e resultados.</p>
+            <p>Inteligência Artificial e Automação Descomplicada para empreendedores.</p>
             <div class="social-links">
-                <a href="#"><i class="fab fa-whatsapp"></i></a>
-                <a href="#"><i class="fab fa-telegram"></i></a>
+                <a href="https://wa.me/message/JLUZNOGJKK4UK1"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://t.me/dr9iSuporte"><i class="fab fa-telegram"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
             </div>
@@ -133,24 +116,22 @@
         <div class="footer-column">
             <h3>Serviços</h3>
             <ul>
-                <li><a href="#"><i class="fas fa-chevron-right"></i> IA e Automação</a></li>
-                <li><a href="#"><i class="fas fa-chevron-right"></i> Licenças Digitais</a></li>
-                <li><a href="#"><i class="fas fa-chevron-right"></i> Consultoria em TI</a></li>
-                <li><a href="#"><i class="fas fa-chevron-right"></i> Sistemas Personalizados</a></li>
+                <li>IA e Automação</li>
+                <li>Licenças Digitais</li>
+                <li>Consultoria em TI</li>
+                <li>Sistemas Personalizados</li>
             </ul>
         </div>
         <div class="footer-column">
             <h3>Contato</h3>
             <ul>
-                <li><a href="#"><i class="fab fa-whatsapp"></i> WhatsApp</a></li>
-                <li><a href="#"><i class="fab fa-telegram"></i> Telegram</a></li>
-                <li><a href="#"><i class="fas fa-envelope"></i> contato@dr9ai.com</a></li>
+                <li>WhatsApp: <a href="https://wa.me/message/JLUZNOGJKK4UK1">Clique aqui</a></li>
+                <li>Telegram: <a href="https://t.me/dr9iSuporte">Clique aqui</a></li>
+                <li>Email: contato@dr9ai.com</li>
             </ul>
         </div>
     </div>
-    <div class="copyright">
-        <p>&copy; 2023 DR9.AI - Todos os direitos reservados.</p>
-    </div>
+    <div class="copyright">&copy; 2025 DR9.AI - Todos os direitos reservados.</div>
 </div>
 </footer>
 
