Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -19,120 +19,123 @@
 
 <!-- HEADER -->
 <header id="header">
-<div class="container">
+  <div class="container">
     <div class="header-content">
-        <a href="#" class="logo"><img src="assets/logo.png" alt="DR9.AI" class="logo-icon"><span>DR9.AI</span></a>
-        <button class="mobile-menu" id="mobileMenu"><i class="fas fa-bars"></i></button>
-        <nav id="mainNav">
-            <ul>
-                <li><a href="#home">Início</a></li>
-                <li><a href="#services">Serviços</a></li>
-                <li><a href="#contact">Contato</a></li>
-            </ul>
-        </nav>
+      <a href="#" class="logo">
+        <img src="assets/logo.png" alt="DR9.AI" class="logo-icon">
+        <span>DR9.AI</span>
+      </a>
+      <button class="mobile-menu" id="mobileMenu"><i class="fas fa-bars"></i></button>
+      <nav id="mainNav">
+        <ul>
+          <li><a href="#home">Início</a></li>
+          <li><a href="#services">Serviços</a></li>
+          <li><a href="#contact">Contato</a></li>
+        </ul>
+      </nav>
     </div>
-</div>
+  </div>
 </header>
 
 <!-- HERO -->
 <section class="hero" id="home">
-<div class="container">
+  <div class="container">
     <div class="hero-content">
-        <h1>DR9.AI</h1>
-        <p class="hero-subtitle">Softwares, IA e Automação Descomplicada</p>
+      <h1>DR9.AI</h1>
+      <p class="hero-subtitle">Softwares, IA e Automação Descomplicada</p>
 
-        <div class="checkbox-list">
-            <div class="checkbox-item"><div class="checkbox-icon">✓</div><div class="checkbox-text">DM para Licenças Exclusivas</div></div>
-            <div class="checkbox-item"><div class="checkbox-icon">✓</div><div class="checkbox-text">IA e Automação para Empreendedores</div></div>
-            <div class="checkbox-item"><div class="checkbox-icon">✓</div><div class="checkbox-text">Licenças Digitais Fáceis de Usar</div></div>
-        </div>
+      <div class="checkbox-list">
+        <div class="checkbox-item"><div class="checkbox-icon">✓</div><div class="checkbox-text">DM para Licenças Exclusivas</div></div>
+        <div class="checkbox-item"><div class="checkbox-icon">✓</div><div class="checkbox-text">IA e Automação para Empreendedores</div></div>
+        <div class="checkbox-item"><div class="checkbox-icon">✓</div><div class="checkbox-text">Licenças Digitais Fáceis de Usar</div></div>
+      </div>
 
-        <div class="buttons">
-            <a href="#" class="btn btn-primary" id="whatsappBtn"><i class="fab fa-whatsapp"></i> Falar no WhatsApp</a>
-            <a href="#" class="btn btn-outline" id="telegramBtn"><i class="fab fa-telegram"></i> Falar no Telegram</a>
-        </div>
+      <div class="buttons">
+        <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary" id="whatsappBtn"><i class="fab fa-whatsapp"></i> Falar no WhatsApp</a>
+        <a href="https://t.me/dr9iSuporte" class="btn btn-outline" id="telegramBtn"><i class="fab fa-telegram"></i> Falar no Telegram</a>
+      </div>
     </div>
-</div>
+  </div>
 </section>
 
 <!-- FEATURES -->
 <section class="features" id="services">
-<div class="container">
+  <div class="container">
     <div class="section-title">
-        <h2>Nossas Soluções em IA</h2>
-        <p>Pré-visualize nossos serviços e escolha o que deseja adquirir</p>
+      <h2>Nossas Soluções em IA</h2>
+      <p>Pré-visualize nossos serviços e escolha o que deseja adquirir</p>
     </div>
     <div class="features-grid">
-        <div class="feature-card">
-            <div class="feature-icon"><i class="fas fa-key"></i></div>
-            <h3>DM para Licenças Exclusivas</h3>
-            <p>Gerenciamento completo de licenças digitais com segurança avançada.</p>
-            <span class="status status-available">Disponível</span>
-        </div>
-        <div class="feature-card">
-            <div class="feature-icon"><i class="fas fa-brain"></i></div>
-            <h3>IA e Automação para Empreendedores</h3>
-            <p>Automação de planilhas, posts programados e suporte a sistemas de gestão.</p>
-            <span class="status status-available">Disponível</span>
-        </div>
-        <div class="feature-card">
-            <div class="feature-icon"><i class="fas fa-id-card"></i></div>
-            <h3>Licenças Digitais Fáceis de Usar</h3>
-            <p>Integração com Adobe, Windows, Chimera, Unclock e outras ferramentas.</p>
-            <span class="status status-available">Disponível</span>
-        </div>
+      <div class="feature-card">
+        <div class="feature-icon"><i class="fas fa-key"></i></div>
+        <h3>DM para Licenças Exclusivas</h3>
+        <p>Gerenciamento completo de licenças digitais com segurança avançada.</p>
+        <span class="status status-available">Disponível</span>
+      </div>
+      <div class="feature-card">
+        <div class="feature-icon"><i class="fas fa-brain"></i></div>
+        <h3>IA e Automação para Empreendedores</h3>
+        <p>Automação de planilhas, posts programados e suporte a sistemas de gestão.</p>
+        <span class="status status-available">Disponível</span>
+      </div>
+      <div class="feature-card">
+        <div class="feature-icon"><i class="fas fa-id-card"></i></div>
+        <h3>Licenças Digitais Fáceis de Usar</h3>
+        <p>Integração com Adobe, Windows, Chimera, Unclock e outras ferramentas.</p>
+        <span class="status status-available">Disponível</span>
+      </div>
     </div>
-</div>
+  </div>
 </section>
 
 <!-- CTA -->
 <section class="cta" id="contact">
-<div class="container">
+  <div class="container">
     <div class="cta-content">
-        <h2>Pronto para revolucionar seu negócio?</h2>
-        <p>Entre em contato e descubra como a DR9.AI pode transformar sua operação com inteligência artificial.</p>
-        <div class="buttons">
-            <a href="#" class="btn btn-primary" id="whatsappBtnFooter"><i class="fab fa-whatsapp"></i> Falar no WhatsApp</a>
-            <a href="#" class="btn btn-outline" id="telegramBtnFooter"><i class="fab fa-telegram"></i> Falar no Telegram</a>
-        </div>
+      <h2>Pronto para revolucionar seu negócio?</h2>
+      <p>Entre em contato e descubra como a DR9.AI pode transformar sua operação com inteligência artificial.</p>
+      <div class="buttons">
+        <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary"><i class="fab fa-whatsapp"></i> Falar no WhatsApp</a>
+        <a href="https://t.me/dr9iSuporte" class="btn btn-outline"><i class="fab fa-telegram"></i> Falar no Telegram</a>
+      </div>
     </div>
-</div>
+  </div>
 </section>
 
 <!-- FOOTER -->
 <footer>
-<div class="container">
+  <div class="container">
     <div class="footer-content">
-        <div class="footer-column">
-            <h3>DR9.AI</h3>
-            <p>Inteligência Artificial e Automação Descomplicada para empreendedores.</p>
-            <div class="social-links">
-                <a href="https://wa.me/message/JLUZNOGJKK4UK1"><i class="fab fa-whatsapp"></i></a>
-                <a href="https://t.me/dr9iSuporte"><i class="fab fa-telegram"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
-            </div>
+      <div class="footer-column">
+        <h3>DR9.AI</h3>
+        <p>Inteligência Artificial e Automação Descomplicada para empreendedores.</p>
+        <div class="social-links">
+          <a href="https://wa.me/message/JLUZNOGJKK4UK1"><i class="fab fa-whatsapp"></i></a>
+          <a href="https://t.me/dr9iSuporte"><i class="fab fa-telegram"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-linkedin-in"></i></a>
         </div>
-        <div class="footer-column">
-            <h3>Serviços</h3>
-            <ul>
-                <li>IA e Automação</li>
-                <li>Licenças Digitais</li>
-                <li>Consultoria em TI</li>
-                <li>Sistemas Personalizados</li>
-            </ul>
-        </div>
-        <div class="footer-column">
-            <h3>Contato</h3>
-            <ul>
-                <li>WhatsApp: <a href="https://wa.me/message/JLUZNOGJKK4UK1">Clique aqui</a></li>
-                <li>Telegram: <a href="https://t.me/dr9iSuporte">Clique aqui</a></li>
-                <li>Email: contato@dr9ai.com</li>
-            </ul>
-        </div>
+      </div>
+      <div class="footer-column">
+        <h3>Serviços</h3>
+        <ul>
+          <li>IA e Automação</li>
+          <li>Licenças Digitais</li>
+          <li>Consultoria em TI</li>
+          <li>Sistemas Personalizados</li>
+        </ul>
+      </div>
+      <div class="footer-column">
+        <h3>Contato</h3>
+        <ul>
+          <li>WhatsApp: <a href="https://wa.me/message/JLUZNOGJKK4UK1">Clique aqui</a></li>
+          <li>Telegram: <a href="https://t.me/dr9iSuporte">Clique aqui</a></li>
+          <li>Email: contato@dr9ai.com</li>
+        </ul>
+      </div>
     </div>
     <div class="copyright">&copy; 2025 DR9.AI - Todos os direitos reservados.</div>
-</div>
+  </div>
 </footer>
 
 <script src="script.js"></script>
