--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
 </head>
 <body>
 
-<!-- PARTICLES -->
 <div id="particles-js"></div>
-<div class="floating floating-1">🚀</div>
-<div class="floating floating-2">🤖</div>
-<div class="floating floating-3">💡</div>
+
+    <div class="floating floating-1">🚀</div>
+    <div class="floating floating-2">🤖</div>
+    <div class="floating floating-3">💡</div>
+
+    <header id="header">
+        <div class="container">
+            <div class="header-content">
+                <a href="#" class="logo"><i class="fas fa-robot logo-icon"></i> DR9.AI</a>
 
 <!-- HEADER -->
 <header id="header">
