--- a/index.html
+++ b/index.html
@@ -11,16 +11,11 @@
 </head>
 <body>
 
+<!-- PARTICLES & FLOATING EMOJIS -->
 <div id="particles-js"></div>
-
-    <div class="floating floating-1">🚀</div>
-    <div class="floating floating-2">🤖</div>
-    <div class="floating floating-3">💡</div>
-
-    <header id="header">
-        <div class="container">
-            <div class="header-content">
-                <a href="#" class="logo"><i class="fas fa-robot logo-icon"></i> DR9.AI</a>
+<div class="floating floating-1">🚀</div>
+<div class="floating floating-2">🤖</div>
+<div class="floating floating-3">💡</div>
 
 <!-- HEADER -->
 <header id="header">
@@ -56,8 +51,8 @@
       </div>
 
       <div class="buttons">
-        <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary" id="whatsappBtn"><i class="fab fa-whatsapp"></i> Falar no WhatsApp</a>
-        <a href="https://t.me/dr9iSuporte" class="btn btn-outline" id="telegramBtn"><i class="fab fa-telegram"></i> Falar no Telegram</a>
+        <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary"><i class="fab fa-whatsapp"></i> Falar no WhatsApp</a>
+        <a href="https://t.me/dr9iSuporte" class="btn btn-outline"><i class="fab fa-telegram"></i> Falar no Telegram</a>
       </div>
     </div>
   </div>
