--- a/index.html
+++ b/index.html
@@ -5,17 +5,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>DR9.AI - Inteligência Artificial e Automação Premium</title>
 <meta name="description" content="DR9.AI - Soluções em IA, automação e licenças digitais. Transforme seu negócio com tecnologia de ponta.">
-
-<!-- FONTES E ICONES -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
-<!-- CSS -->
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<!-- EMOJIS FLUTUANTES -->
+<!-- PARTICLES -->
+<div id="particles-js"></div>
 <div class="floating floating-1">🚀</div>
 <div class="floating floating-2">🤖</div>
 <div class="floating floating-3">💡</div>
@@ -24,10 +21,7 @@
 <header id="header">
   <div class="container">
     <div class="header-content">
-      <a href="#" class="logo">
-        <img src="assets/logo.png" alt="DR9.AI" class="logo-icon">
-        <span>DR9.AI</span>
-      </a>
+      <a href="#" class="logo"><img src="assets/logo.png" alt="DR9.AI" class="logo-icon"><span>DR9.AI</span></a>
       <button class="mobile-menu" id="mobileMenu"><i class="fas fa-bars"></i></button>
       <nav id="mainNav">
         <ul>
@@ -47,14 +41,12 @@
       <h1>DR9.AI</h1>
       <p class="hero-subtitle">Softwares, IA e Automação Descomplicada</p>
 
-      <!-- CHECKLISTS -->
       <div class="checkbox-list">
         <div class="checkbox-item"><div class="checkbox-icon">✓</div><div class="checkbox-text">DM para Licenças Exclusivas</div></div>
         <div class="checkbox-item"><div class="checkbox-icon">✓</div><div class="checkbox-text">IA e Automação para Empreendedores</div></div>
         <div class="checkbox-item"><div class="checkbox-icon">✓</div><div class="checkbox-text">Licenças Digitais Fáceis de Usar</div></div>
       </div>
 
-      <!-- BOTÕES -->
       <div class="buttons">
         <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary"><i class="fab fa-whatsapp"></i> Falar no WhatsApp</a>
         <a href="https://t.me/dr9iSuporte" class="btn btn-outline"><i class="fab fa-telegram"></i> Falar no Telegram</a>
@@ -63,24 +55,8 @@
   </div>
 </section>
 
-<!-- MENU INTERATIVO DE SERVIÇOS -->
-<section class="services-menu" id="services">
-  <div class="container">
-    <h2>Olá! 👋 Bem-vindo à DR9.AI</h2>
-    <p>Escolha os serviços que deseja conhecer ou contratar:</p>
-    <div class="menu-grid">
-      <div class="menu-item"><span>1️⃣</span> Licenças Técnicas</div>
-      <div class="menu-item"><span>2️⃣</span> Unclock Chimera</div>
-      <div class="menu-item"><span>3️⃣</span> Licenças para Computador (Adobe, Office, etc.)</div>
-      <div class="menu-item"><span>4️⃣</span> IMEI Unlock (somente privado)</div>
-      <div class="menu-item"><span>5️⃣</span> Fluxo de Perguntas IA</div>
-      <div class="menu-item"><span>6️⃣</span> Postagem Programada</div>
-    </div>
-  </div>
-</section>
-
 <!-- FEATURES -->
-<section class="features">
+<section class="features" id="services">
   <div class="container">
     <div class="section-title">
       <h2>Nossas Soluções em IA</h2>
