Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<!-- PARTICLES -->
+<!-- PARTICLES & FLOATING EMOJIS -->
 <div id="particles-js"></div>
 <div class="floating floating-1">🚀</div>
 <div class="floating floating-2">🤖</div>
@@ -41,12 +41,14 @@
       <h1>DR9.AI</h1>
       <p class="hero-subtitle">Softwares, IA e Automação Descomplicada</p>
 
+      <!-- CHECKLIST ANIMADO -->
       <div class="checkbox-list">
         <div class="checkbox-item"><div class="checkbox-icon">✓</div><div class="checkbox-text">DM para Licenças Exclusivas</div></div>
         <div class="checkbox-item"><div class="checkbox-icon">✓</div><div class="checkbox-text">IA e Automação para Empreendedores</div></div>
         <div class="checkbox-item"><div class="checkbox-icon">✓</div><div class="checkbox-text">Licenças Digitais Fáceis de Usar</div></div>
       </div>
 
+      <!-- BOTÕES -->
       <div class="buttons">
         <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary"><i class="fab fa-whatsapp"></i> Falar no WhatsApp</a>
         <a href="https://t.me/dr9iSuporte" class="btn btn-outline"><i class="fab fa-telegram"></i> Falar no Telegram</a>
@@ -55,31 +57,63 @@
   </div>
 </section>
 
-<!-- FEATURES -->
+<!-- SERVICES -->
 <section class="features" id="services">
   <div class="container">
     <div class="section-title">
-      <h2>Nossas Soluções em IA</h2>
-      <p>Pré-visualize nossos serviços e escolha o que deseja adquirir</p>
+      <h2>Nossos Serviços</h2>
+      <p>Explore nossas soluções em tecnologia, automação e inteligência artificial</p>
     </div>
     <div class="features-grid">
       <div class="feature-card">
+        <div class="feature-icon"><i class="fas fa-robot"></i></div>
+        <h3>IA e Automação</h3>
+        <p>Automatizamos processos, posts programados e sistemas de gestão para aumentar produtividade.</p>
+      </div>
+      <div class="feature-card">
         <div class="feature-icon"><i class="fas fa-key"></i></div>
-        <h3>DM para Licenças Exclusivas</h3>
-        <p>Gerenciamento completo de licenças digitais com segurança avançada.</p>
-        <span class="status status-available">Disponível</span>
+        <h3>Licenças Digitais</h3>
+        <p>Gerenciamento completo de licenças para softwares como Adobe, Office e outras ferramentas.</p>
       </div>
       <div class="feature-card">
-        <div class="feature-icon"><i class="fas fa-brain"></i></div>
-        <h3>IA e Automação para Empreendedores</h3>
-        <p>Automação de planilhas, posts programados e suporte a sistemas de gestão.</p>
-        <span class="status status-available">Disponível</span>
+        <div class="feature-icon"><i class="fas fa-laptop-code"></i></div>
+        <h3>Consultoria em TI</h3>
+        <p>Planejamento estratégico e suporte técnico para otimizar infraestrutura e sistemas.</p>
       </div>
       <div class="feature-card">
-        <div class="feature-icon"><i class="fas fa-id-card"></i></div>
-        <h3>Licenças Digitais Fáceis de Usar</h3>
-        <p>Integração com Adobe, Windows, Chimera, Unclock e outras ferramentas.</p>
-        <span class="status status-available">Disponível</span>
+        <div class="feature-icon"><i class="fas fa-cogs"></i></div>
+        <h3>Sistemas Personalizados</h3>
+        <p>Desenvolvimento de softwares sob medida para atender às necessidades da sua empresa.</p>
+      </div>
+      <div class="feature-card">
+        <div class="feature-icon"><i class="fas fa-network-wired"></i></div>
+        <h3>Integração de Sistemas</h3>
+        <p>Conectamos diferentes softwares para que trabalhem de forma integrada e eficiente.</p>
+      </div>
+      <div class="feature-card">
+        <div class="feature-icon"><i class="fas fa-shield-alt"></i></div>
+        <h3>Segurança Digital</h3>
+        <p>Proteção de dados, auditoria de sistemas e prevenção contra ameaças digitais.</p>
+      </div>
+      <div class="feature-card">
+        <div class="feature-icon"><i class="fas fa-cloud"></i></div>
+        <h3>Cloud & Armazenamento</h3>
+        <p>Configuração e gestão de nuvem para backup, colaboração e alta disponibilidade de dados.</p>
+      </div>
+      <div class="feature-card">
+        <div class="feature-icon"><i class="fas fa-chalkboard-teacher"></i></div>
+        <h3>Treinamento & Capacitação</h3>
+        <p>Workshops e aulas para sua equipe dominar ferramentas de IA e automação.</p>
+      </div>
+      <div class="feature-card">
+        <div class="feature-icon"><i class="fas fa-mobile-alt"></i></div>
+        <h3>Unlock & Gerenciamento de Dispositivos</h3>
+        <p>Serviços de desbloqueio IMEI, Chimera e gerenciamento profissional de dispositivos.</p>
+      </div>
+      <div class="feature-card">
+        <div class="feature-icon"><i class="fas fa-chart-line"></i></div>
+        <h3>Automação de Marketing</h3>
+        <p>Campanhas, posts e fluxos automatizados para impulsionar vendas e engajamento.</p>
       </div>
     </div>
   </div>
